--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,21 +6,144 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 57.129.1.20
+    name: 🇺🇸_US_美国_1
+    type: trojan
+    server: 89.116.180.179
     port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: p6us4.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us4
   - &id002
-    name: 🇫🇷_FR_法国_2
-    type: ss
-    server: 51.158.203.2
+    name: 🇺🇸_US_美国_2
+    type: trojan
+    server: 167.68.5.183
     port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: 6us3.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us3
   - &id003
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: ssr
+    server: 120.232.177.250
+    port: 1080
+    password: bxsnucrgk6hfish
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 40575:fV3Nxq
+  - &id004
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: nl-v2ray.freevmess.com
+    port: 8442
+    cipher: auto
+    uuid: 061bd7f6-c628-4c71-b5e8-b4e3b83e6ef2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id005
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: ca-v2ray.freevmess.com
+    port: 8442
+    cipher: auto
+    uuid: 1742ace4-07bb-464e-ad66-0357345a538d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id006
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: ssr
+    server: yd-05.paofunlink.com
+    port: 1084
+    password: bxsnucrgk6hfish
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 7521:12HsOu
+  - &id007
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 162.247.153.130
+    port: 55899
+    password: AsMJa6QEMfJiBUuZiIe2YE
+    cipher: chacha20-ietf-poly1305
+  - &id008
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 3.91.181.129
+    port: 20015
+    password: 6cerJipnW7jxuKKSYWVNR4
+    cipher: chacha20-ietf-poly1305
+  - &id009
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: ssr
+    server: yd-02.paofunlink.com
+    port: 1080
+    password: bxsnucrgk6hfish
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 40575:fV3Nxq
+  - &id010
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: ssr
+    server: yd-05.paofunlink.com
+    port: 1083
+    password: bxsnucrgk6hfish
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 40575:fV3Nxq
+  - &id011
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
+    type: ssr
+    server: yd-02.paofunlink.com
+    port: 1082
+    password: bxsnucrgk6hfish
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 7521:12HsOu
+  - &id012
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
+    type: ssr
+    server: 120.232.177.250
+    port: 1083
+    password: bxsnucrgk6hfish
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 40575:fV3Nxq
+  - &id013
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_7
+    type: ssr
+    server: 120.232.177.250
+    port: 1082
+    password: bxsnucrgk6hfish
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 40575:fV3Nxq
+  - &id014
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
     type: vmess
     server: mm3.shabijichang.com
     port: 80
@@ -34,297 +157,42 @@ proxies:
       path: /
       headers:
         host: mm3.shabijichang.com
-  - &id004
+  - &id015
+    name: 🇫🇷_FR_法国_1
+    type: ss
+    server: 54.36.174.181
+    port: 6379
+    password: zDNVedRFPQexG9v
+    cipher: aes-256-gcm
+  - &id016
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 54.36.174.181
+    port: 8882
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id017
     name: 🇫🇷_FR_法国_3
     type: ss
-    server: 51.158.203.4
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇦🇫_AF_阿富汗
-    type: ss
-    server: 121.127.46.147
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id006
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 5.161.68.48
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id007
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
-    type: vmess
-    server: family.mgtajhiz.ir
-    port: 2052
-    cipher: auto
-    uuid: 544f2e93-51b0-4d47-fd72-e7d858021bbd
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: family.mgtajhiz.ir
-  - &id008
-    name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 51.158.200.160
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id009
-    name: 🇫🇷_FR_法国_5
-    type: ss
-    server: 51.158.204.70
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id010
-    name: 🇫🇷_FR_法国_6
-    type: ss
-    server: 146.59.110.169
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id011
-    name: 🇫🇷_FR_法国_7
-    type: ss
-    server: 51.158.200.50
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id012
-    name: 🇫🇷_FR_法国_8
-    type: ss
-    server: 51.158.54.237
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id013
-    name: 🇫🇷_FR_法国_9
-    type: ss
-    server: 51.158.200.49
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id014
-    name: 🇫🇷_FR_法国_10
-    type: ss
-    server: 57.129.1.21
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id015
-    name: 🇫🇷_FR_法国_11
-    type: ss
-    server: 51.158.200.166
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id016
-    name: 🇫🇷_FR_法国_12
-    type: ss
-    server: 51.158.200.119
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id017
-    name: 🇫🇷_FR_法国_13
-    type: ss
-    server: 51.158.200.149
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
+    server: 54.36.174.181
+    port: 6679
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
   - &id018
-    name: 🇫🇷_FR_法国_14
-    type: ss
-    server: 51.158.202.172
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id019
-    name: 🇫🇷_FR_法国_15
-    type: ss
-    server: 51.158.200.161
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id020
-    name: 🇫🇷_FR_法国_16
-    type: ss
-    server: 51.158.202.187
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id021
-    name: 🇫🇷_FR_法国_17
-    type: ss
-    server: 51.158.202.188
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id022
-    name: 🇺🇸_US_美国_2
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: 5.161.86.165
-    port: 3389
+    server: 172.67.229.31
+    port: 8880
     cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id023
-    name: 🇷🇴_RO_罗马尼亚->🇺🇦_UA_乌克兰
-    type: vmess
-    server: ss.wwww.htttbbx.alirezashhamraz.tk
-    port: 18785
-    cipher: auto
-    uuid: 4388d6ff-ef7e-4263-a91f-6db05bdc3d22
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id024
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 104.21.75.246
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
       headers:
-        host: sbl2.shabijichang.com
-  - &id025
-    name: 🇫🇷_FR_法国_18
-    type: ss
-    server: 146.59.71.220
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id026
-    name: 🇫🇷_FR_法国_19
-    type: ss
-    server: 146.59.111.197
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id027
-    name: 🇫🇷_FR_法国_20
-    type: ss
-    server: 146.59.71.221
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id028
-    name: 🇫🇷_FR_法国_21
-    type: ss
-    server: 162.19.204.75
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id029
-    name: 🇫🇷_FR_法国_22
-    type: ss
-    server: 141.95.98.94
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id030
-    name: 🇫🇷_FR_法国_23
-    type: ss
-    server: 146.59.110.240
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id031
-    name: 🇫🇷_FR_法国_24
-    type: ss
-    server: 146.59.111.185
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id032
-    name: 🇫🇷_FR_法国_25
-    type: ss
-    server: 141.95.126.100
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id033
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: mrb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mrb2.shabijichang.com
-  - &id034
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: mm2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm2.shabijichang.com
-  - &id035
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_3
-    type: vmess
-    server: ld2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ld2.shabijichang.com
-  - &id036
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: ml2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 10ea3b2a-b615-45f1-b1b7-c62bafe8c80c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ml2.shabijichang.com
+        host: fr7.tehme100.fun
 proxy-groups:
   - name: PROXY
     type: select
@@ -369,24 +237,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -410,24 +260,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -449,24 +281,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
