--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,94 +8,7 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: a8.wxlljc520.com
-    port: 443
-    cipher: auto
-    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: golinkwuxian.top
-    network: ws
-    ws-opts:
-      path: /apple
-      headers:
-        host: 777.golinkwuxian.top
-  - &id002
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: a7.wxlljc520.com
-    port: 443
-    cipher: auto
-    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: golinkwuxian.top
-    network: ws
-    ws-opts:
-      path: /apple
-      headers:
-        host: 777.golinkwuxian.top
-  - &id003
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 112.29.94.23
-    port: 43526
-    cipher: auto
-    uuid: 21a9bff2-72de-4e62-93ff-8b159f66d875
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id004
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 51.158.195.96
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇫🇷_FR_法国_2
-    type: ss
-    server: 51.158.195.96
-    port: 80
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id006
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: sbl2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
-  - &id007
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: mm2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm2.shabijichang.com
-  - &id008
-    name: 🇯🇵_JP_日本->🇺🇸_US_美国
-    type: vmess
-    server: aa1.wuxianliulianng.xyz
+    server: bb1.wuxianliulianng.xyz
     port: 443
     cipher: auto
     uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
@@ -108,324 +21,313 @@ proxies:
       path: /apple
       headers:
         host: 111.golinkwuxian.top
-  - &id009
-    name: 🇫🇷_FR_法国_3
-    type: ss
-    server: 51.158.195.96
-    port: 110
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id010
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10845
-    udp: true
-    password: b5d54f18-0e1f-4562-b2e4-de3bf984a317
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10838
-    udp: true
-    password: b5d54f18-0e1f-4562-b2e4-de3bf984a317
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 51.158.202.251
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id013
-    name: 🇫🇷_FR_法国_5
+  - &id002
+    name: 🇫🇷_FR_法国_1
     type: ss
     server: 57.129.1.20
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id014
+  - &id003
     name: 🇬🇧_GB_英国_1
     type: ss
     server: 198.244.231.34
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id015
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7708
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id016
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7701
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id017
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: ssr
-    server: 120.240.88.111
-    port: 7709
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id018
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7709
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id019
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
-    type: ssr
-    server: 120.240.88.111
-    port: 7704
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@ccbaohe
-    protocol-param: 84263:3gj7aB
-  - &id020
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_7
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7703
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id021
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_8
-    type: ssr
-    server: 120.240.88.111
-    port: 7706
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id022
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_9
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7704
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id023
-    name: 🇬🇧_GB_英国_2
-    type: trojan
-    server: 18.133.213.117
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    skip-cert-verify: true
-    network: tcp
-  - &id024
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
+  - &id004
+    name: 🇨🇦_CA_加拿大
     type: vmess
-    server: snmxw.qkhbyf.tech
-    port: 2052
+    server: 193.203.203.88
+    port: 2082
     cipher: auto
-    uuid: 6da3e574-52f1-4690-a53b-2847ce756456
+    uuid: 5f2d026e-1dbd-4bb0-aa61-b1bcc544ab2c
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /lonanhis
-      headers:
-        host: bx.qkhbyf.tech
-  - &id025
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: c5.wuxianliulianng.xyz
-    port: 443
-    cipher: auto
-    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: golinkwuxian.top
-    network: ws
-    ws-opts:
-      path: /apple
-      headers:
-        host: 555.golinkwuxian.top
-  - &id026
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: bb5.wuxianliulianng.xyz
-    port: 443
-    cipher: auto
-    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: golinkwuxian.top
-    network: ws
-    ws-opts:
-      path: /apple
-      headers:
-        host: 555.golinkwuxian.top
-  - &id027
-    name: 🇰🇷_KR_韩国->🇺🇸_US_美国
+    network: http
+  - &id005
+    name: 🇩🇪_DE_德国_1
     type: trojan
-    server: other.kunlun-ppg.com
-    port: 10837
+    server: 5.104.107.143
+    port: 443
     udp: true
-    password: b5d54f18-0e1f-4562-b2e4-de3bf984a317
-    sni: alibaba-node.cn
+    password: d33df23a-8b9e-468e-bc33-dd3643008ced
+    sni: de1.xn--mes358a9urctx.com
     skip-cert-verify: true
     network: tcp
-  - &id028
-    name: 🇦🇫_AF_阿富汗
+  - &id006
+    name: 🇫🇷_FR_法国_2
     type: ss
-    server: 121.127.46.147
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id029
+    server: 54.36.174.181
+    port: 5001
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id007
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 54.36.174.181
+    port: 5000
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id008
+    name: 🇫🇷_FR_法国_4
+    type: ss
+    server: 54.36.174.181
+    port: 443
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
+  - &id009
+    name: 🇫🇷_FR_法国_5
+    type: ss
+    server: 54.36.174.181
+    port: 2375
+    password: faBAoD54k87UJG7
+    cipher: aes-256-gcm
+  - &id010
     name: 🇫🇷_FR_法国_6
     type: ss
-    server: 162.19.59.164
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id030
+    server: 54.36.174.181
+    port: 2376
+    password: faBAoD54k87UJG7
+    cipher: aes-256-gcm
+  - &id011
     name: 🇫🇷_FR_法国_7
     type: ss
-    server: 141.94.143.221
+    server: 51.158.200.149
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id031
-    name: 🇩🇪_DE_德国
-    type: ss
-    server: 80.92.204.106
-    port: 9094
-    password: rpgbNnU9rDDU4aWZ
-    cipher: aes-256-cfb
-  - &id032
-    name: 🇷🇺_RU_俄罗斯联邦
+  - &id012
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 217.196.101.125
-    port: 8080
+    server: 5.161.115.156
+    port: 3389
     cipher: auto
-    uuid: 752a3159-bf37-487e-b6c0-b6b206e8ee9e
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id033
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    network: http
+  - &id013
+    name: 🇺🇸_US_美国_3
+    type: trojan
+    server: 143.198.144.12
+    port: 47546
+    udp: true
+    password: YB3shKTT5F
+    sni: android.googleapis.com
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇩🇪_DE_德国_2
     type: vmess
-    server: mm3.shabijichang.com
+    server: 185.242.84.49
     port: 80
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 9db34944-bc87-43cb-8b57-45cf87b2b006
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
-      headers:
-        host: mm3.shabijichang.com
-  - &id034
-    name: 🇺🇸_US_美国_7
+      path: /vmess
+  - &id015
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: tttt.ssfree.ru
     port: 443
     cipher: auto
-    uuid: 12797f4c-8bb4-11ee-8458-00163e49219e
+    uuid: 3d3dbd5a-8c7d-11ee-b77b-00163e49219e
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /search
-  - &id035
-    name: 🇺🇸_US_美国_8
+  - &id016
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: 104.21.75.246
-    port: 80
+    server: a7.wxlljc520.com
+    port: 443
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /apple
       headers:
-        host: sbl2.shabijichang.com
-  - &id036
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+        host: 777.golinkwuxian.top
+  - &id017
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: ld2.shabijichang.com
-    port: 80
+    server: a8.wxlljc520.com
+    port: 443
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /apple
       headers:
-        host: ld2.shabijichang.com
-  - &id037
-    name: 🇺🇸_US_美国_9
+        host: 777.golinkwuxian.top
+  - &id018
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: vmess
-    server: 172.67.77.246
-    port: 2052
+    server: 3u1s04.abzoones.xyz
+    port: 36501
     cipher: auto
-    uuid: 6da3e574-52f1-4690-a53b-2847ce756456
+    uuid: 2c266c57-6f8b-4449-bcb4-4ecea4ea901b
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /lonan
-      headers:
-        host: vdsus.1145114.me
-  - &id038
-    name: 🇬🇧_GB_英国_3
+    servername: us04.abpilot.xyz
+    network: tcp
+  - &id019
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: vmess
+    server: 3u1s05.abzoones.xyz
+    port: 36506
+    cipher: auto
+    uuid: 2c266c57-6f8b-4449-bcb4-4ecea4ea901b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: us05.abpilot.xyz
+    network: tcp
+  - &id020
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: vmess
+    server: 3u1s06.abzoones.xyz
+    port: 36511
+    cipher: auto
+    uuid: 2c266c57-6f8b-4449-bcb4-4ecea4ea901b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: us06.abpilot.xyz
+    network: tcp
+  - &id021
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: vmess
+    server: 7i4n04.abzoones.xyz
+    port: 36831
+    cipher: auto
+    uuid: 2c266c57-6f8b-4449-bcb4-4ecea4ea901b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: in04.abpilot.xyz
+    network: tcp
+  - &id022
+    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
+    type: vmess
+    server: 6i2r04.abzoones.xyz
+    port: 36877
+    cipher: auto
+    uuid: 2c266c57-6f8b-4449-bcb4-4ecea4ea901b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: br04.abpilot.xyz
+    network: tcp
+  - &id023
+    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
+    type: vmess
+    server: 2h4u04.abzoones.xyz
+    port: 36864
+    cipher: auto
+    uuid: 2c266c57-6f8b-4449-bcb4-4ecea4ea901b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hu04.abpilot.xyz
+    network: tcp
+  - &id024
+    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
+    type: vmess
+    server: 9a8r04.abzoones.xyz
+    port: 36861
+    cipher: auto
+    uuid: 2c266c57-6f8b-4449-bcb4-4ecea4ea901b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ar04.abpilot.xyz
+    network: tcp
+  - &id025
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: vmess
+    server: 8u9a04.abzoones.xyz
+    port: 36871
+    cipher: auto
+    uuid: 2c266c57-6f8b-4449-bcb4-4ecea4ea901b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ua04.abpilot.xyz
+    network: tcp
+  - &id026
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: vmess
+    server: 2u3k04.abzoones.xyz
+    port: 36811
+    cipher: auto
+    uuid: 2c266c57-6f8b-4449-bcb4-4ecea4ea901b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: uk04.abpilot.xyz
+    network: tcp
+  - &id027
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    type: vmess
+    server: 3d6e04.abzoones.xyz
+    port: 36841
+    cipher: auto
+    uuid: 2c266c57-6f8b-4449-bcb4-4ecea4ea901b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: de04.abpilot.xyz
+    network: tcp
+  - &id028
+    name: 🇨🇳_CN_中国->🇵🇹_PT_葡萄牙
+    type: vmess
+    server: 4p2t01.abzoones.xyz
+    port: 36881
+    cipher: auto
+    uuid: 2c266c57-6f8b-4449-bcb4-4ecea4ea901b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: pt04.abpilot.xyz
+    network: tcp
+  - &id029
+    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
+    type: vmess
+    server: 5c1a04.abzoones.xyz
+    port: 36701
+    cipher: auto
+    uuid: 2c266c57-6f8b-4449-bcb4-4ecea4ea901b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ca04.abpilot.xyz
+    network: tcp
+  - &id030
+    name: 🇫🇷_FR_法国_8
+    type: ss
+    server: 141.94.143.221
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id031
+    name: 🇬🇧_GB_英国_2
     type: vmess
     server: ukmws.mainssh.xyz
     port: 443
@@ -438,7 +340,44 @@ proxies:
     ws-opts:
       path: /vmess
       headers:
-        host: pmsc.pubgmobile.com
+        host: ukmws.mainssh.xyz
+  - &id032
+    name: 🇺🇸_US_美国->🇦🇪_AE_阿联酋
+    type: vmess
+    server: aeshfa.qkhbyf.tech
+    port: 443
+    cipher: chacha20-poly1305
+    uuid: 6da3e574-52f1-4690-a53b-2847ce756456
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /lonan
+      headers:
+        host: ae001.qkhbyf.tech
+  - &id033
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 104.22.75.105
+    port: 8880
+    cipher: auto
+    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
+      headers:
+        host: fr7.tehme100.fun
+  - &id034
+    name: 🇫🇷_FR_法国_9
+    type: ss
+    server: 54.36.174.181
+    port: 5601
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
 proxy-groups:
   - name: PROXY
     type: select
@@ -499,10 +438,6 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -542,10 +477,6 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
   - name: SELECT
     type: select
     proxies:
@@ -583,10 +514,6 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
