--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,52 +6,92 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10845
-    udp: true
-    password: b5d54f18-0e1f-4562-b2e4-de3bf984a317
-    sni: alibaba-node.cn
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: us-fsl.jikuai.xyz
+    port: 8443
+    cipher: auto
+    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
+    alterId: 0
+    tls: true
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /user
   - &id002
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: cdn.yifenjichang.top
+    port: 2087
+    cipher: auto
+    uuid: 622dc2d0-b3ca-41d3-8e16-c2ce10d2f5c8
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 622dc2d0-b3ca-41d3-8e16-c2ce10d2f5c8-vm
+      headers:
+        host: catalyst-lee-bears-spears.trycloudflare.com
+  - &id003
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: fr-v2ray.freevmess.com
+    port: 8442
+    cipher: auto
+    uuid: 6773a666-5593-4c9f-aacd-52300b6a02d4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id004
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 5.161.115.156
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id005
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗
+    type: vmess
+    server: indec.qkhbyf.tech
+    port: 443
+    cipher: auto
+    uuid: 6da3e574-52f1-4690-a53b-2847ce756456
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /lonan
+      headers:
+        host: uswu.1145114.me
+  - &id006
+    name: 🇷🇺_RU_俄罗斯联邦
     type: trojan
-    server: other.kunlun-ppg.com
-    port: 10850
+    server: 89.221.224.94
+    port: 80
     udp: true
-    password: b5d54f18-0e1f-4562-b2e4-de3bf984a317
-    sni: alibaba-node.cn
+    password: 28c79056-ccfd-4cc1-93d4-c337cc782e65
+    sni: is2-t.sshmax.xyz
     skip-cert-verify: true
     network: tcp
-  - &id003
-    name: 🇰🇷_KR_韩国->🇺🇸_US_美国
+  - &id007
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: trojan
     server: other.kunlun-ppg.com
     port: 10837
     udp: true
-    password: b5d54f18-0e1f-4562-b2e4-de3bf984a317
+    password: 3a285ed3-ebdf-485b-9e71-9528b313c69d
     sni: alibaba-node.cn
     skip-cert-verify: true
     network: tcp
-  - &id004
-    name: 🇷🇺_RU_俄罗斯联邦_1
-    type: vmess
-    server: els1.yunjisuan.cf
-    port: 80
-    cipher: auto
-    uuid: c75b345e-bb05-4a44-88e1-ca026ffe965d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tms.dingtalk.com
-  - &id005
-    name: 🇺🇸_US_美国_1
+  - &id008
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: 104.21.75.246
     port: 80
@@ -65,40 +105,122 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id006
-    name: 🇺🇸_US_美国_2
+  - &id009
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10850
+    udp: true
+    password: 3a285ed3-ebdf-485b-9e71-9528b313c69d
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10845
+    udp: true
+    password: 3a285ed3-ebdf-485b-9e71-9528b313c69d
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇨🇦_CA_加拿大
     type: vmess
-    server: bb5.wuxianliulianng.xyz
-    port: 443
+    server: 193.203.203.88
+    port: 2082
     cipher: auto
-    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
+    uuid: 5f2d026e-1dbd-4bb0-aa61-b1bcc544ab2c
     alterId: 0
-    tls: true
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id012
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+    type: vmess
+    server: fr-01.jikuai.xyz
+    port: 2082
+    cipher: auto
+    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /apple
+      path: /
       headers:
-        host: 555.golinkwuxian.top
-  - &id007
-    name: 🇺🇸_US_美国_3
+        host: fr-01.jikuai.xyz
+  - &id013
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
     type: vmess
-    server: a7.wxlljc520.com
-    port: 443
+    server: 112.29.94.23
+    port: 43526
     cipher: auto
-    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
+    uuid: 21a9bff2-72de-4e62-93ff-8b159f66d875
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: usd.yj2022.gq
+    port: 8880
+    cipher: auto
+    uuid: 4b5e4565-322f-4223-a891-78a84f189726
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /apple
+      path: /XSjeg73o6ZdsheahCb5JG
       headers:
-        host: 777.golinkwuxian.top
-  - &id008
+        host: usd.yj2022.gq
+  - &id015
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10838
+    udp: true
+    password: 3a285ed3-ebdf-485b-9e71-9528b313c69d
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇸🇨_SC_塞舌尔->🇫🇷_FR_法国
+    type: vmess
+    server: 45.133.247.249
+    port: 2086
+    cipher: auto
+    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
+      headers:
+        host: fr1.tehme100.fun
+  - &id017
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 104.22.75.105
+    port: 8880
+    cipher: auto
+    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
+      headers:
+        host: fr7.tehme100.fun
+  - &id018
     name: 🇺🇸_US_美国->🇮🇳_IN_印度
     type: vmess
-    server: mm3.shabijichang.com
+    server: mm2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -109,28 +231,14 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mm3.shabijichang.com
-  - &id009
-    name: 🇺🇸_US_美国_4
+        host: mm2.shabijichang.com
+  - &id019
+    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
     type: vmess
-    server: a.asghar-hamrah.store
-    port: 2087
+    server: au-01.jikuai.xyz
+    port: 2082
     cipher: auto
-    uuid: 2a3263e2-891c-4446-b474-a8c63acb6e25
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: /
-      grpc-mode: gun
-  - &id010
-    name: 🇷🇺_RU_俄罗斯联邦_2
-    type: vmess
-    server: els2.yunjisuan.cf
-    port: 80
-    cipher: auto
-    uuid: c75b345e-bb05-4a44-88e1-ca026ffe965d
+    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -138,77 +246,24 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: tms.dingtalk.com
-  - &id011
-    name: 🇺🇸_US_美国_5
+        host: au-01.jikuai.xyz
+  - &id020
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
-    server: c1.wuxianliulianng.xyz
-    port: 443
+    server: ld2.shabijichang.com
+    port: 80
     cipher: auto
-    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /apple
-      headers:
-        host: 111.golinkwuxian.top
-  - &id012
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: c5.wuxianliulianng.xyz
-    port: 443
-    cipher: auto
-    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /apple
-      headers:
-        host: 555.golinkwuxian.top
-  - &id013
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10838
-    udp: true
-    password: b5d54f18-0e1f-4562-b2e4-de3bf984a317
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: tttt.ssfree.ru
-    port: 443
-    cipher: auto
-    uuid: 12797f4c-8bb4-11ee-8458-00163e49219e
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /search
-  - &id015
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: laxuskfa.qkhbyf.tech
-    port: 2052
-    cipher: auto
-    uuid: 6da3e574-52f1-4690-a53b-2847ce756456
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /lonan
+      path: /
       headers:
-        host: usiorc.qkhbyf.tech
-  - &id016
-    name: 🇺🇸_US_美国_9
+        host: ld2.shabijichang.com
+  - &id021
+    name: 🇺🇸_US_美国_8
     type: vmess
     server: a8.wxlljc520.com
     port: 443
@@ -222,73 +277,6 @@ proxies:
       path: /apple
       headers:
         host: 777.golinkwuxian.top
-  - &id017
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
-    type: vmess
-    server: snmxw.qkhbyf.tech
-    port: 2052
-    cipher: auto
-    uuid: 6da3e574-52f1-4690-a53b-2847ce756456
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /lonanhis
-      headers:
-        host: bx.qkhbyf.tech
-  - &id018
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 172.67.77.246
-    port: 2052
-    cipher: auto
-    uuid: 6da3e574-52f1-4690-a53b-2847ce756456
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /lonan
-      headers:
-        host: vdsus.1145114.me
-  - &id019
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 112.29.94.23
-    port: 43526
-    cipher: auto
-    uuid: 21a9bff2-72de-4e62-93ff-8b159f66d875
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
-    type: vmess
-    server: us.lonan.can.1145114.me
-    port: 2052
-    cipher: auto
-    uuid: 6da3e574-52f1-4690-a53b-2847ce756456
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /lonan
-      headers:
-        host: vdsus.1145114.me
-  - &id021
-    name: 🇩🇪_DE_德国
-    type: vmess
-    server: de-v2ray.freevmess.com
-    port: 8442
-    cipher: auto
-    uuid: 0ff3822e-885b-4293-ac74-7faa98989569
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
 proxy-groups:
   - name: PROXY
     type: select
